--- a/website/styles.css
+++ b/website/styles.css
@@ -1,4 +1,28 @@
-.doctor-who-content img
-	{
-		float: left;
-	}
+.doctor-who-content img {
+	float: left;
+	margin-right: 50px;
+	margin-bottom: 35px;
+}
+body     {
+	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
+	font-size: 16px;
+	background-color: #1C1C1C;
+	line-height: 30px;
+}
+.doctor-who-content {
+	background-color: #DADEE3;
+	padding-right: 50px;
+	padding-left: 50px;
+	padding-top: 20px;
+}
+.wrapper {
+	margin-left: auto;
+	margin-right: auto;
+	width: 950px;
+}
+td {
+	background-color: #A0ACB9;
+}
+.doctor-who-content p {
+	line-height: 30px;
+}
